# gensol-banff

./: .gitattributes  .gitconfig  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  build.cmd  build_debug.cmd  clean.cmd  config_python.yml
Python/: .gitignore  MANIFEST.in  Makefile  pyproject.toml  ruff_minimum.toml  setup.cfg
Python/sample_programs/: custom_logger.py
Python/sample_programs/conversion_examples/: Determin01.py  Determin01.sas  DonorImp01.py  DonorImp02.py  DonorImp02.sas  Errorloc01.py  Errorloc01.sas  Errorloc02.py  Estimator01.py  Estimator01.sas  Estimator02.py  Estimator02.sas  MassImp01.py  MassImp01.sas  Prorate03.py  Prorate03.sas  VerifyEdits01.py  VerifyEdits01.sas  editstats01.py  outlier01.py  outlier01.sas  outlier02.py  outlier03.py  outlier03.sas  outlier04.py
Python/sample_programs/test_cases/determin/: data_determin.py  test_determin_h01.py  test_determin_h01_SAS.py
Python/sample_programs/test_cases/donorimp/: test_donorimp_a03.py
Python/scripts/: compile_messages.cmd  get_messages.cmd  process_sast_output.py
Python/scripts/gettext/: nls_update_po.sh  nls_variables.sh
Python/scripts/i18n/: readme.txt
Python/tests/: common_data.py  conftest.py  pytest.ini  readme_testing.md  run_pytest.cmd  run_pytest.sh
Python/tests/features/: run_pytest.cmd  test_default_output_spec.py
Python/tests/features/deprecations/: test_deprecations.py
Python/tests/features/diagnostics/: demo_diagnostics_outlierD07_a.py
Python/tests/features/errorloc_instatus/: example_errorloc_instatus.py  test_errorloc_instatus.py  test_errorloc_instatus.sas
Python/tests/features/exclude_where/: test_donorimp_exclude_where.py  test_estimato_exclude_where.py  test_outlier_exclude_where.py
Python/tests/features/logger/: test_custom_logger.py
Python/tests/features/massimpu_outstatus/: test_massimpu_outstatus.py
Python/tests/features/misc_validation/: test_duplicate_output_file.py  test_max_var_length.py
Python/tests/features/nls/: basic_runners.py  demo_nls.py  test_locale.py  test_nls.py
Python/tests/features/optional_outputs/: test_optional_output_datasets.py
Python/tests/features/pytest_helpers/: demo_assert_dataset_equal_test.py
Python/tests/features/reload/: demo_reload.py  test_reload.py
Python/tests/features/standard_outstatus/: test_standard_outstatus_determin.py  test_standard_outstatus_donorimp.py  test_standard_outstatus_errorloc.py  test_standard_outstatus_estimato.py  test_standard_outstatus_massimpu.py  test_standard_outstatus_outlier.py  test_standard_outstatus_prorate.py
Python/tests/low_level/: linux_proc_test_script.py
Python/tests/ptest/CEAG/: donorimp_min.sas  errorloc_min.sas  estimato_min.py  estimato_min.sas  estimato_min_feather.py  estimato_min_sas.py  prorate_min.sas  test_donorimp.py  test_errorloc.py  test_estimato.py  test_prorate.py
Python/tests/ptest/Donor/: asml.py
Python/tests/ptest/big_ceag/: .gitignore  BanffProcedureCall.py  BanffProcedureCall.sas  DELETE_ME.txt
Python/tests/python_code/: test_kwargs.py  test_type_converters.py
Python/tests/regression_tests/: sas_export.sas
Python/tests/regression_tests/determin/: conftest.py  data_determin.py  test_determin_VL_single.py  test_determin_a01.py  test_determin_a02.py  test_determin_a03.py  test_determin_a06.py  test_determin_a07.py  test_determin_b02.py  test_determin_e02.py  test_determin_feat_presort.py  test_determin_h01.py  test_determin_h01_SAS.py  test_determin_status_empty.py  test_determin_status_missing.py  test_determin_status_missing.sas
Python/tests/regression_tests/donorimp/: conftest.py  data_donorimp.py  test_donorimp_VL_single.py  test_donorimp_a01.py  test_donorimp_a02.py  test_donorimp_a03.py  test_donorimp_a03_sas.py  test_donorimp_b01.py  test_donorimp_c01.py  test_donorimp_c02.py  test_donorimp_c03.py  test_donorimp_d01.py  test_donorimp_d02.py  test_donorimp_d03.py  test_donorimp_d03_SAS.py  test_donorimp_e01.py  test_donorimp_e03.py  test_donorimp_f01.py  test_donorimp_f02.py  test_donorimp_f03.py  test_donorimp_f04.py  test_donorimp_feat_prefill.py  test_donorimp_feat_presort.py  test_donorimp_i02.py  test_donorimp_j01.py  test_donorimp_j02.py  test_donorimp_j04.py  test_donorimp_j05.py  test_donorimp_k01.py  test_donorimp_k02.py  test_donorimp_k04.py  test_donorimp_k05.py  test_donorimp_k06.py  test_donorimp_l01.py  test_donorimp_l02.py  test_donorimp_m01.py  test_donorimp_m02.py  test_donorimp_n01.py  test_donorimp_n02.py  test_donorimp_o01.py  (+14 more)
Python/tests/regression_tests/editstat/: conftest.py  data_editstat.py  run_pytest.sh  test_editstat_b01.py  test_editstat_b02.py  test_editstat_b03.py  test_editstat_b06.py  test_editstat_c02.py
Python/tests/regression_tests/errorloc/: conftest.py  data_errorloc.py  test_errorloc_VL_single.py  test_errorloc_a01.py  test_errorloc_a02.py  test_errorloc_a03.py  test_errorloc_b02.py  test_errorloc_d02.py  test_errorloc_it01.py
Python/tests/regression_tests/estimato/: conftest.py  data_estimato.py  test_estimato_17a03.py  test_estimato_17d03.py  test_estimato_VL_single.py  test_estimato_feat_prefill.py  test_estimato_feat_presort.py  test_estimato_sync.py  test_estimato_verify_specs.py
Python/tests/regression_tests/massimpu/: conftest.py  data_massimpu.py  test_massimpu_VL_single.py  test_massimpu_a01.py  test_massimpu_a02.py  test_massimpu_a03.py  test_massimpu_b02.py
Python/tests/regression_tests/misc/: test_outlier_indata_as_hist.py  test_varlist_whitespace.py
Python/tests/regression_tests/outlier/: conftest.py  data_outlier.py  run_pytest.cmd  test_outlier_VL_single.py  test_outlier_a02.py  test_outlier_a05.py  test_outlier_b01.py  test_outlier_b02.py  test_outlier_d03.py  test_outlier_outsummary.py  test_outlier_sync.py
Python/tests/regression_tests/prorate/: conftest.py  data_prorate.py  test_prorate_VL_single.py  test_prorate_a02.py  test_prorate_a03.py  test_prorate_a04.py  test_prorate_o02.py  test_prorate_verify_edits.py
Python/tests/unit_tests/: conftest.py  run_pytest.cmd  run_pytest.sh
Python/tests/unit_tests/determin/: conftest.py  (+2 more)
(+766 files in other folders)
